[package]
name = "kernel"
version = "0.1.0"
authors = ["Douglas Urner <dlu@canishe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Select the target.
[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[profile.dev]
panic = "abort"

##-----------------------------------------------------------------------------
## Dependencies
##-----------------------------------------------------------------------------

[dependencies]