[package]
name = "kernel"
version = "0.1.0"
authors = ["Douglas Urner <dlu@canishe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

##-----------------------------------------------------------------------------
## Features
##
## - Target selection
##-----------------------------------------------------------------------------

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

##-----------------------------------------------------------------------------
## Build Profiles
##-----------------------------------------------------------------------------

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

##-----------------------------------------------------------------------------
## Dependencies
##-----------------------------------------------------------------------------

[dependencies]